[feat] 여행 후기 리뷰(TripRecordReview) 수정 기능 구현 + 수정 완료시 마이 리뷰 페이지로 리다이렉트 구현.
응답 DTO를 TripRecordReviewListResponseDto의 List로 감싸서 반환함.